[package]
name = "http-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["server", "http1", "http2"] }
tokio = { version = "1.34.0", features = ["full"] }
rusqlite = { version =  "0.30.0", features = ["bundled-full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.7", features = ["cargo", "env", "color", "suggestions", "usage"] }
hex = "0.4.3"
chrono = "0.4.31"
ctrlc = "3.1.9"

[profile.release]
lto = true
strip = true