[package]
name = "http-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5.0", features = ["server", "http1"] }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["tokio"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["cargo", "env", "color", "suggestions", "usage"] }
hex = "0.4.3"
time = { version = "0.3.36", features = ["formatting"] }

[profile.release]
lto = true
strip = true